# KFEmojiPack

./: .gitignore  Cargo.toml  Converter.py  README.md
.github/workflows/: build.yml  publish.yml  test.yml
Classes/: GenerateTexture.uc
Configs/: ServerPerks_Template.ini
src/: cli.rs  lib.rs  main.rs  types.rs  util.rs
tests/: cli_tests.rs
