[package]
name = "kf_emoji_pack"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true

[dependencies]
image = "0.24"
gumdrop = "0"
rayon = "1"
